--- a/css/timer.css
+++ b/css/timer.css
@@ -1,31 +1,8 @@
-/**{
+*{
     box-sizing: border-box;
 }
 img {
     width: 100%;
-}
-body {
-    text-align: center;
-    margin-top: 200px;
-}
-#timer {
-    font-family: lato;
-    font-size: 100px;
-    font-weight: 300px;
-    padding: 30px;
-    margin: 40px;
-    background-color: black;
-}
-#start {
-    font-size: 40px;
-    font-family: monospace;
-    background-color: blue;
-    color: white;
-}*/
-
-
-body {
-	background-color: #e6e6e6;
 }
 h1 {
 	font-size: 4.5em;
@@ -44,16 +21,9 @@ button {
 	border-color: green;
 }
 
-#reset {
+/*#reset {
 	background-color: gray;
 	border-color: gray;
-}
-
-.container {
-	margin: auto;
-	margin-top: 200px;
-	width: 400px;
-	height: 400px;
 }
 #controls {
 	margin-left: 7px;
